Model X seats, do not send unavailable options to img

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					</optgroup>
 				</select>
 			</label>
-			<label class="ms">Seats
+			<label class="ms mx">Seats
 				<select id="seats">
 					<optgroup label="Textile">
 						<option class="ms-2012" value="IBMB">Black</option>
@@ -88,8 +88,10 @@
 						<option value="IPMG">Gray</option>
 						<option value="IPMT">Tan</option>
 					</optgroup>
-					<optgroup class="ms-2016" label="Leather">
+					<optgroup class="ms mx" label="Leather">
 						<option value="QPMB">Black</option>
+						<option value="QPMB">Tan</option>
+						<option value="QPMB">White</option>
 					</optgroup>
 					<optgroup class="ms-2016" label="Premium">
 						<option value="QTPP">Black</option>
