Seats & side for Model x

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 					</optgroup>
 					<optgroup class="ms mx" label="Leather">
 						<option value="QPMB">Black</option>
-						<option value="QPMB">Tan</option>
-						<option value="QPMB">White</option>
+						<option value="QPMT">Tan</option>
+						<option value="QPMW">White</option>
 					</optgroup>
 					<optgroup class="ms-2016" label="Premium">
 						<option value="QTPP">Black</option>
@@ -155,7 +155,7 @@
 						<option class="ms-2012" value="OUT1_3QTR">Outside 3D</option>
 					</optgroup>
 					<optgroup label="Interior">
-						<option class="ms m3" value="STUD_SEAT">Side</option>
+						<option value="STUD_SEAT">Side</option>
 						<option class="ms-2012" value="STUD_SEAT_DRIVER">Driver</option>
 						<option class="ms-2012" value="STUD_SEAT_3QTR">Passenger</option>
 						<option class="ms mx" value="STUD_SEAT_ABOVE">Above</option>
