Order elements, Model X headliner

--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
 					</optgroup>
 					<optgroup label="Metallic">
 						<option class="m3" value="PPSB">Deep Blue</option>
-						<option class="m3" value="PMLS">Silver</option>
 						<option class="m3" value="PMNG">Midnight Silver</option>
-						<option class="m3" value="PMSS">Silver (again?)</option>
-						<option class="ms mx" value="COL2-PMBL">Obsidian Black</option>
-						<option class="ms-2012" value="COL2-PMMB">Pacific Blue</option>
+						<option class="m3" value="PMLS">Silver (SS?)</option>
+						<option class="m3" value="PMSS">Silver (LS?)</option>
 						<option class="ms mx" value="COL2-PPSB">Deep Blue</option>
-						<option class="ms-2012" value="COL2-PMAB">Anza Brown</option>
-						<option class="ms-2012" value="COL2-PMSG">Sequoia Green</option>
-						<option class="ms-2012" value="COL2-PMTG">Dolphin Gray</option>
-						<option class="ms mx" value="COL2-PMSS">Starlight Silver</option>
+						<option class="ms mx" value="COL2-PMBL">Obsidian Black</option>
 						<option class="ms mx" value="COL2-PMNG">Midnight Silver</option>
+						<option class="ms mx" value="COL2-PMSS">Starlight Silver</option>
 						<option class="ms mx" value="COL2-PPTI">Titanium</option>
+						<option class="ms-2012" value="COL2-PMAB">Anza Brown</option>
+						<option class="ms-2012" value="COL2-PMTG">Dolphin Gray</option>
+						<option class="ms-2012" value="COL2-PMMB">Pacific Blue</option>
+						<option class="ms-2012" value="COL2-PMSG">Sequoia Green</option>
 					</optgroup>
 					<optgroup label="Multi-Coat">
-						<option class="m3" value="PPMR">Red</option>
 						<option class="m3" value="PPSW">Pearl White</option>
-						<option class="ms mx" value="COL3-PPMR">Sunset Red</option>
+						<option class="m3" value="PPMR">Red</option>
 						<option class="ms mx" value="COL3-PPSW">Pearl White</option>
+						<option class="ms mx" value="COL3-PPMR">Sunset Red</option>
 					</optgroup>
 				</select>
 			</label>
@@ -57,10 +57,10 @@
 					<optgroup class="ms" label="19″">
 						<option class="ms-2012" value="WT19">Silver Split 5-Spoke</option>
 						<option class="ms-2012" value="WTAE">Silver Aero</option>
-						<option value="WTAS">Silver Slipstream</option>
-						<option class="ms-2016" value="WTDS">Gray Slipstream</option>
 						<option value="WTTB">Silver Cyclone</option>
 						<option class="ms-2016" value="WTGP">Gray Cyclone</option>
+						<option value="WTAS">Silver Slipstream</option>
+						<option class="ms-2016" value="WTDS">Gray Slipstream</option>
 					</optgroup>
 					<optgroup class="mx" label="20″">
 						<option value="WT20">Silver Slipstream</option>
@@ -131,9 +131,9 @@
 					<option class="ms-2016 mx" value="IDBO">Figured Ash Wood</option>
 				</select>
 			</label>
-			<label class="ms">Headliner
+			<label class="ms mx">Headliner
 				<select id="headliner">
-					<option value="">Light + Dark Bar</option>
+					<option class="ms" value="">Light + Dark Bar</option>
 					<option value="UTAW">Light/White</option>
 					<option value="UTAB">Dark/Black</option>
 				</select>
