Grey vs white for ms vs mx

--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
 					</optgroup>
 					<optgroup class="ms mx" label="Leather">
 						<option value="QPMB">Black</option>
-						<option value="QPMG">Gray</option>
+						<option class="ms" value="QPMG">Gray</option>
 						<option value="QPMT">Tan</option>
+						<option class="mx" value="QPMW">White</option>
 					</optgroup>
 					<optgroup class="ms" label="Leather Executive">
 						<option value="QPMB,SR02">Black</option>
