Remove performance seats on X

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						<option value="QTPC">Cream</option>
 						<option value="QTPW">White</option>
 					</optgroup>
-					<optgroup label="Performance Leather">
+					<optgroup class="ms" label="Performance Leather">
 						<option value="IZMB">Black</option>
 						<option value="IZMG">Gray</option>
 						<option value="IZMT">Tan</option>
