Reset selections when unavailable

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			</label>
 			<label class="ms mx">Seats
 				<select id="seats">
-					<optgroup label="Textile">
+					<optgroup class="ms" label="Textile">
 						<option class="ms-2012" value="IBMB">Black</option>
 						<option class="ms-2016" value="QTTB">Black</option>
 					</optgroup>
@@ -102,10 +102,16 @@
 						<option value="QPMG,SR02">Gray</option>
 						<option value="QPMT,SR02">Tan</option>
 					</optgroup>
-					<optgroup class="ms-2016" label="Premium">
+					<optgroup class="ms-2016" label="Premium Leather">
 						<option value="QTPP">Black</option>
 						<option value="QTPC">Cream</option>
 						<option value="QTPW">White</option>
+					</optgroup>
+					<optgroup class="mx" label="Premium Leather">
+						<option value="QLPP">Black</option>
+						<option value="QLPC">Cream</option>
+						<option value="QLPT">Tan</option>
+						<option value="QLPW">White</option>
 					</optgroup>
 					<optgroup class="ms" label="Performance Leather">
 						<option value="IZMB">Black</option>
@@ -117,8 +123,8 @@
 			</label>
 			<label class="mx">Seating
 				<select id="seating">
-					<option class="mx" value="SR05">5</option>
-					<option selected="selected" class="mx" value="SR07">7</option>
+					<option value="SR07">7</option>
+					<option value="SR05">5</option>
 				</select>
 			</label>
 			<label class="ms mx">Decor
