Seat options, opacity loading, img title for options

--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
 			</label>
 			<label class="ms mx">Seats
 				<select id="seats">
-					<optgroup class="ms" label="Textile">
+					<optgroup class="ms mx" label="Textile">
 						<option class="ms-2012" value="IBMB">Black</option>
 						<option class="ms-2016" value="QTTB">Black</option>
+						<option class="mx" value="QPBT">Black Multi-Pattern</option>
 					</optgroup>
 					<optgroup class="ms-2012" label="Leather">
 						<option value="IPMB">Black</option>
@@ -107,11 +108,15 @@
 						<option value="QTPC">Cream</option>
 						<option value="QTPW">White</option>
 					</optgroup>
+					<optgroup class="mx" label="Extended Leather">
+						<option value="QLET">Tan</option>
+						<option value="QLEW">White</option>
+					</optgroup>
 					<optgroup class="mx" label="Premium Leather">
-						<option value="QLPP">Black</option>
+						<option value="QLPB">Black</option>
 						<option value="QLPC">Cream</option>
 						<option value="QLPT">Tan</option>
-						<option value="QLPW">White</option>
+						<option value="QLPW">Ultra White</option>
 					</optgroup>
 					<optgroup class="ms" label="Performance Leather">
 						<option value="IZMB">Black</option>
@@ -140,9 +145,11 @@
 			</label>
 			<label class="ms mx">Headliner
 				<select id="headliner">
-					<option class="ms" value="">Light + Dark Bar</option>
-					<option value="UTAW">Light/White</option>
-					<option value="UTAB">Dark/Black</option>
+					<option value="UTMF">Standard Fabric</option>
+					<option value="UTPB">Black Plastic</option>
+					<option value="UTAB">Black Alcantara</option>
+					<option class="ms" value="">White Alcantara (Black Bar)</option>
+					<option value="UTAW">White Alcantara</option>
 				</select>
 			</label>
 			<label class="ms">Roof
