Console option and MX calipers

--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@
 					</optgroup>
 				</select>
 			</label>
+			<label class="ms-2012">Console
+				<select id="console">
+					<option value="YF00">Fabric Floor</option>
+					<option value="YF01">Yacht Floor</option>
+					<option value="YFFC">Integrated</option>
+				</select>
+			</label>
 			<label class="mx">Seating
 				<select id="seating">
 					<option value="SR07">7</option>
@@ -161,7 +168,7 @@
 					<option class="ms-2016" value="RFFG">Full Glass</option>
 				</select>
 			</label>
-			<label class="ms">Brakes
+			<label class="ms mx">Brakes
 				<select id="brakes">
 					<option value="BC0B">Black</option>
 					<option value="BC0R">Red</option>
