Black plastic MX only

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 				<label class="ms mx">Headliner
 					<select id="headliner">
 						<option value="UTMF">Standard Fabric</option>
-						<option value="UTPB">Black Plastic</option>
+						<option class="mx" value="UTPB">Black Plastic</option>
 						<option value="UTAB">Black Alcantara</option>
 						<option class="ms" value="">White Alcantara (Black Bar)</option>
 						<option value="UTAW">White Alcantara</option>
